@@ -1,3 +1,8 @@
+2024-07-26  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-dissect-file-name, tramp-compute-multi-hops):
+	Handle hops with "%" in their names, like USER%DOMAIN or POD%NAMESPACE.
+
 2024-07-25  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-container.el (tramp-kubernetes-namespace): Initialize with
